--- a/The Front-End Web Developer Bootcamp HTML, CSS, JS & React/mini-project/style.css
+++ b/The Front-End Web Developer Bootcamp HTML, CSS, JS & React/mini-project/style.css
@@ -1,9 +1,89 @@
+@import url('https://fonts.googleapis.com/css2?family=Pangolin&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Pangolin', cursive;
+    font-size: 20px;
 }
 
 .hero-img{
     background-image: url(images/food1.jpg);
+    width: 100%;
+    height: 100vh;
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    font-style: italic;
+    
 } 
+
+.hero-wrapper {
+    color: white;
+    position: absolute;
+    top: 220px;
+    left: 20px;
+    right: 20px;
+    
+}
+
+.hero-wrapper h1 {
+    font-size: 50px;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+}
+
+.hero-wrapper p{
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.hero-wrapper .from-code {
+    display: block;
+    width: 50%;
+    margin: 0 auto 0 auto;
+    outline: none;
+    border: none;
+}
+
+.hero-wrapper .from-code input{
+    border-radius: 3px;
+    height: 50px;
+    width: 50%;
+    outline: none;
+    border: none;
+}
+
+.hero-wrapper .from-code input::placeholder {
+    text-align: center;
+}
+
+.hero-wrapper .from-code button {
+    color: #06F;
+    width: 150px;
+    height: 52px;
+    margin-top: 30px;
+    margin-left: 10px;
+    border-radius: 10px 0px;
+    border: 5px solid #06F;
+    background: none;
+    outline: none;
+    transition: 0.5s;
+}
+
+.hero-wrapper .from-code button:hover {
+    color: white;
+    width: 150px;
+    height: 52px;
+    margin-top: 30px;
+    margin-left: 10px;
+    border-radius: 10px 0px;
+    border: 5px solid white;
+    background: grey;
+    
+    transition: 0.5s;
+}
+
